--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h4 {
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="character.html">Character</a></li>
+            <li><a href="characters.html">Characters</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
