--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ h4 {
     </div>
     
     <div class="bannerimg">
-        <img src="/sdcard/download/65791.jpg" alt="Attack on Titan Banner">
+        <img src="characterimg/65791.jpg" alt="Attack on Titan Banner">
     </div>
     
     <div class="header-text">
