--- a/characters/eren.html
+++ b/characters/eren.html
@@ -30,7 +30,7 @@ img {
 <body>
 <div class="container">
     <h1>Eren Jaeger</h1>
-        <img src="characterimg/eren.jpeg" alt="Eren Jaeger">
+        <img src="characterimg/eren.jpg" alt="Eren Jaeger">
             <p><b>Full Name:</b> Eren Jaeger</p>
             <p><b>Birthdate:</b> March 30th </p>
             <p><b>Age:</b> <ul><li>At the start of the series: 10 (at the beginning of Attack on Titan)</li>
