--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="LINK">
+<link rel="icon" type="image/png" href="characterimg/81eng4YeGdL.jpg">
 <title>Attack on Titan | Article</title>
 <style>
 body {
