--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="characterimg/81eng4YeGdL.jpg">
-<title>Attack on Titan | Article</title>
+<link rel="icon" type="image/png" href="https://i.postimg.cc/KzWsZ05D/81eng4-Ye-Gd-L.jpg">
+<title>Attack on Titan | Home</title>
 <style>
 body {
     font-family: Arial, sans-serif;
